dots done, services to complete

--- a/index.html
+++ b/index.html
@@ -49,14 +49,149 @@
                 </div>
 
                 <button type="submit">Request a Quote</button>
-
-               
+            </div>
+            <div id="header__laptop-dots-container">
+                <div class="header__laptop-dot active"></div>
+                <div class="header__laptop-dot"></div>
+                <div class="header__laptop-dot"></div>
             </div>
         </section>
     </header>
+    <section id="services__container">
+        <h2>Our services</h2>
+        <p>Lorem Ipsum is simply dummy Business industry.</p>
+        <div id="services__items-container">
+            <div class="services__item">
+                <div class="services__icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="55px"
+                        height="54px">
+                        <text kerning="auto" font-family="Myriad Pro" fill="rgb(0, 0, 0)" font-size="50px" x="3px"
+                            y="46.9059999999999px">
+                            <tspan font-size="50px" font-family="FontAwesome" fill-opacity="0%">&#61463;</tspan>
+                        </text>
+                        <text kerning="auto" font-family="Myriad Pro" stroke-width="2px" stroke="rgb(246, 119, 44)"
+                            fill-opacity="0" stroke-opacity="1" font-size="50px" x="3px" y="46.9059999999999px">
+                            <tspan font-size="50px" font-family="FontAwesome">&#61463;</tspan>
+                        </text>
+                    </svg>
+                </div>
+                <div class="services__text">
+                    <h3>Font-Awesome Icons</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting ind
+                        ustry. Lorem Ipsum has been the industry's standard dummy text ever
+                        since the 1500s, when an unknown printer.</p>
+                </div>
+            </div>
+            <div class="services__item">
+                <div class="services__icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="55px"
+                        height="54px">
+                        <text kerning="auto" font-family="Myriad Pro" fill="rgb(0, 0, 0)" font-size="50px" x="4px"
+                            y="47.9059999999999px">
+                            <tspan font-size="50px" font-family="FontAwesome" fill="#9ACA40" fill-opacity="0%">&#61459;
+                            </tspan>
+                        </text>
+                        <text kerning="auto" font-family="Myriad Pro" stroke-width="2px" stroke="rgb(112, 157, 202)"
+                            fill-opacity="0" stroke-opacity="1" font-size="50px" x="4px" y="47.9059999999999px">
+                            <tspan font-size="50px" font-family="FontAwesome" fill="#9ACA40">&#61459;</tspan>
+                        </text>
+                    </svg>
+                </div>
+                <div>
+                    <h3>Fully Responsive Design</h3>
+                    <p>Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model
+                        text, and a search for 'lorem ipsum' will un
+                        cover many web sites still in their infancy.</p>
+                </div>
+            </div>
+            <div class="services__item">
+                <div class="services__icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="60px"
+                    height="54px">
+                        <text kerning="auto" font-family="Myriad Pro" fill="rgb(0, 0, 0)" font-size="45px" x="4px"
+                            y="44.1869999999999px">
+                            <tspan font-size="45px" font-family="FontAwesome" fill="#9ACA40"  fill-opacity="0%">&#61853;</tspan>
+                        </text>
+                        <text kerning="auto" font-family="Myriad Pro" stroke-width="2px" stroke="rgb(112, 157, 202)"
+                            fill-opacity="0" stroke-opacity="1" font-size="45px" x="4px" y="44.1869999999999px">
+                            <tspan font-size="45px" font-family="FontAwesome" fill="#9ACA40">&#61853;</tspan>
+                        </text>
+                    </svg>
+                </div>
+                <div>
+                    <h3>Working Contact form</h3>
+                    <p>Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model
+                        text, and a search for 'lorem ipsum' will un
+                        cover many web sites still in their infancy.</p>
+                </div>
+            </div>
+            <div class="services__item">
+                <div class="services__icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="58px"
+                    height="58px">
+                        <text kerning="auto" font-family="Myriad Pro" fill="rgb(0, 0, 0)" font-size="50px" x="4px"
+                            y="50.9059999999999px">
+                            <tspan font-size="50px" font-family="FontAwesome" fill="#9ACA40"  fill-opacity="0%">&#61749;</tspan>
+                        </text>
+                        <text kerning="auto" font-family="Myriad Pro" stroke-width="2px" stroke="rgb(112, 157, 202)"
+                            fill-opacity="0" stroke-opacity="1" font-size="50px" x="4px" y="50.9059999999999px">
+                            <tspan font-size="50px" font-family="FontAwesome" fill="#9ACA40">&#61749;</tspan>
+                        </text>
+                    </svg>
+                </div>
+                <div>
+                    <h3>Retina Ready icons here</h3>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour
+                        or randomised words which don't look even slightly believable.</p>
+                </div>
+            </div>
+            <div class="services__item">
+                <div class="services__icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="55px"
+                        height="55px">
+                        <text kerning="auto" font-family="Myriad Pro" fill="rgb(0, 0, 0)" font-size="50px" x="4px"
+                            y="46.9059999999999px">
+                            <tspan font-size="50px" font-family="FontAwesome" fill="#9ACA40" fill-opacity="0%">&#61835;</tspan>
+                        </text>
+                        <text kerning="auto" font-family="Myriad Pro" stroke-width="2px" stroke="rgb(112, 157, 202)"
+                            fill-opacity="0" stroke-opacity="1" font-size="50px" x="4px" y="46.9059999999999px">
+                            <tspan font-size="50px" font-family="FontAwesome" fill="#9ACA40">&#61835;</tspan>
+                        </text>
+                    </svg>
+                </div>
+                <div>
+                    <h3>Friendly Code</h3>
+                    <p>Finibus Bonorum et Malorum" by Cicero are also reproduced in their
+                        exact original form, accompanied by English versions from the 1914 translation by H. Rackham</p>
+                </div>
+            </div>
+            <div class="services__item">
+                <div class="services__icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="35px"
+                        height="60px">
+                        <text kerning="auto" font-family="Myriad Pro" fill="rgb(0, 0, 0)" font-size="50px" x="4px"
+                            y="54.9059999999999px">
+                            <tspan font-size="50px" font-family="FontAwesome" fill="#9ACA40"  fill-opacity="0%">&#61781;</tspan>
+                        </text>
+                        <text kerning="auto" font-family="Myriad Pro" stroke-width="2px" stroke="rgb(112, 157, 202)"
+                            fill-opacity="0" stroke-opacity="1" font-size="50px" x="4px" y="54.9059999999999px">
+                            <tspan font-size="50px" font-family="FontAwesome" fill="#9ACA40">&#61781;</tspan>
+                        </text>
+                    </svg>
+                </div>
+                <div>
+                    <h3>Flat trendy landing page Design</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting ind
+                        ustry. Lorem Ipsum has been the industry's standard dummy text ever
+                        since the 1500s, when an unknown printer.</p>
+                </div>
+            </div>
+        </div>
+    </section>
     <div class="lala"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="build/js/bundle.js"></script>
+    <script src="src/js/main.js"></script>
 
 </body>
 <!-- Should be delete -->
